contrast fixed

--- a/styles/agreement.css
+++ b/styles/agreement.css
@@ -5,9 +5,9 @@
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Shadow effect */
     max-width: 600px;
-    margin: 0 auto;
+    margin: 5% ;
     font-family: 'Old Standard TT', serif; /* Use an appropriate font for a parchment look */
-    color: #8B4513; /* Brown text color */
+
 }
 
 #rental-contract h2 {
@@ -28,4 +28,11 @@
 
 #rental-contract li {
     margin-bottom: 10px;
+}
+.dark-mode #vehicle-info {
+    color: #1b2a49;
+}
+.dark-mode #rental-contract {
+    border: 2px solid  #E6CE9A; /* Brown border color */
+    color: #FAE66E;
 }
